// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppFilter /> should render correctly 1`] = `
<div>
  <div
    class="pf-c-dropdown pf-m-full-height"
    data-ouia-component-id="App Filter"
    data-ouia-component-type="PF4/Dropdown"
    data-ouia-safe="true"
  >
    <button
      aria-expanded="false"
      aria-haspopup="false"
      class="pf-c-dropdown__toggle"
      data-ouia-component-id="OUIA-Generated-DropdownToggle-1"
      data-ouia-component-type="PF4/DropdownToggle"
      data-ouia-safe="true"
      id="toggle-id"
      type="button"
    >
      <span
        class="pf-c-dropdown__toggle-text"
      >
        All apps and services
      </span>
      <span
        class="pf-c-dropdown__toggle-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`<AppFilter /> should render empty state on no filter match and clear app filters 1`] = `
<div>
  <div
    class="pf-c-dropdown pf-m-expanded pf-m-full-height"
    data-ouia-component-id="App Filter"
    data-ouia-component-type="PF4/Dropdown"
    data-ouia-safe="true"
  >
    <button
      aria-expanded="true"
      aria-haspopup="false"
      class="pf-c-dropdown__toggle"
      data-ouia-component-id="OUIA-Generated-DropdownToggle-4"
      data-ouia-component-type="PF4/DropdownToggle"
      data-ouia-safe="true"
      id="toggle-id"
      type="button"
    >
      <span
        class="pf-c-dropdown__toggle-text"
      >
        All apps and services
      </span>
      <span
        class="pf-c-dropdown__toggle-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </button>
    <div
      class="pf-c-dropdown__menu"
    />
  </div>
</div>
`;
